# SATNOGS-open-claw-skill

./: .gitignore  AGENT.md  IDENTITY.md  MEMORY.md  README.md  SKILL.md  SOUL.md  USER.md  pyproject.toml
.github/workflows/: ci.yml
.openclaw/: noaa_weather_discord.env.example  workspace-state.json
.openclaw/skills/: noaa_weather_discord.md  satnogs_984_passes.md  satnogs_post_report.md
examples/: env.example
examples/systemd/: satnogs-discord.service  satnogs-discord.timer
memory/.dreams/: events.jsonl  phase-signals.json  session-ingestion.json  short-term-recall.json
memory/.dreams/session-corpus/: 2026-05-16.txt  2026-05-17.txt
memory/dreaming/light/: 2026-05-17.md
satnogs_discord_skill/: __init__.py  __main__.py  cli.py  config.py  discord.py  messages.py  satnogs.py  state.py  timeutils.py
scripts/: noaa_weather_discord.cron.example  noaa_weather_discord.py  noaa_weather_discord.sh  satnogs-discord-cron.sh  satnogs_984.cron.example  satnogs_984_common.py  satnogs_984_completion_report.py  satnogs_984_daily.sh  satnogs_984_daily_report.py  satnogs_984_updates.sh  satnogs_post_report.py
tests/: test_config.py  test_discord.py  test_messages.py  test_state.py
